# pepo-rag

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/schemas/: rag_response.py
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: agent_factory.py  model_router.py  rag_service.py
backend/app/schemas/: rag_response.py
backend/peporag_eval/: __init__.py  ollama_benchmark.py  paths.py  rag_eval_runner.py  rag_normalize.py
backend/scripts/: benchmark_models.py  check_ollama.sh  eval_rag_quality.py  eval_rag_quality_raw_qwen.py  test_db_conn.py  test_inference.sh
backend/tests/data/: golden_questions.json
docs/: ARCHITECTURE.md  EXPERIMENTATION.md  PRD.md  ROADMAP.md  SETUP_LOCAL.md  benchmark_results.json  rag_eval_results.json  rag_eval_results_qwen_raw.json
docs/adrs/: 001-postgresql-pgvector.md  002-pydantic-ai.md  003-fastapi-rest.md  004-local-inference-ollama.md  005-langchain-ingestion.md  006-retrieval-evolution-strategy.md  006-single-canonical-response-squema-and-adapters.md
docs/development/: DEVLOG.md
frontend/: Dockerfile  app.py  pyproject.toml
notebooks/: qwen_normalization_explainer.ipynb
scripts/: eval_rag_quality.py  eval_rag_quality_raw_qwen.py
