[project]
name = "tech-rag-assistant-frontend"
version = "0.1.0"
description = "Frontend for Tech RAG Assistant"
readme = {content-type = "text/markdown", text = ""}
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]